# edge-oracle

./: .gitignore  CLAUDE.md  PROGRESS.md  SPEC.md
.github/workflows/: ci.yml
executor/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
executor/alembic/: env.py
executor/alembic/versions/: 0001_exec_init.py
executor/app/: config.py
executor/app/api/: main.py
executor/app/breakers/: checks.py
executor/app/clob/: amounts.py  auth.py  client.py  order.py
executor/app/db/: engine.py  store.py  tables.py
executor/app/models/: advised.py  intent.py
executor/app/orchestrator/: approve.py  consume.py  consumer.py  deps.py  intents.py  pipeline.py  run.py  workflow.py
executor/app/relay/: client.py
executor/app/signer/: approval.py  crypto.py  deps.py  eip712.py  main.py  policy.py  service.py
executor/tests/: test_advised_view.py  test_approval.py  test_breakers.py  test_clob.py  test_config.py  test_consumer.py  test_control_api.py  test_intent.py  test_intents_from_signal.py  test_pipeline.py  test_relay_client.py  test_signer_crypto.py  test_signer_policy.py  test_signer_service.py  test_store.py  test_workflow.py
executor/tests/fixtures/: advised_signal.json
infra/: docker-compose.full.yml  docker-compose.yml
quant/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
quant/alembic/: env.py
quant/alembic/versions/: 0001_init.py  0002_signals.py  0003_price_signals.py  0004_calibration.py  0005_trades.py  0006_user_config.py  0007_positions.py  0008_paper_trades.py  0009_paper_trades_fill_check.py
quant/app/: __init__.py  config.py  main.py  seed_demo.py
quant/app/advisor/: __init__.py  ranking.py  view.py
quant/app/api/: __init__.py  backtest.py  calibration.py  config.py  deps.py  paper.py  positions.py  security.py  signals.py
quant/app/backtest/: __init__.py  engine.py
quant/app/db/: __init__.py  engine.py  tables.py
quant/app/ingestion/: __init__.py  resolution.py  resolution_engine.py  scanner.py  store.py  trades_engine.py  trades_transform.py  transform.py
quant/app/math/: __init__.py  arb.py  backtest.py  bet_sizing.py  calibration.py  correction.py  fair_value.py  fees.py  longshot.py  paper_performance.py  profit.py
quant/app/models/: __init__.py  advisor.py  alert.py  backtest.py  book.py  calibration.py  config.py  market.py  paper_performance.py  paper_trade.py  position.py  quote.py  signal.py  trade.py
quant/app/monitoring/: __init__.py  engine.py
quant/app/observability/: __init__.py  alert_bus.py  alert_dedup.py  alerts.py  logging.py  metrics.py  sentry.py
quant/app/paper/: __init__.py  capture.py  engine.py  fill_check.py
quant/app/polymarket/: __init__.py  clob_client.py  data_client.py  gamma_client.py  http.py  schemas.py
quant/app/signals/: __init__.py  engine.py  price_engine.py
quant/app/streaming/: __init__.py  book_state.py  engine.py  redis_bus.py
quant/tests/: conftest.py  test_advisor_view.py  test_alert_bus.py  test_alert_dedup.py  test_alerts.py  test_api.py  test_arb.py  test_arb_fill_check.py  test_backtest.py  test_backtest_engine.py  test_bet_sizing.py  test_calibration.py  test_category.py  test_category_enrichment.py  test_clob_client.py  test_correction.py  test_data_client.py  test_fair_value.py  test_fees.py  test_gamma_client.py  test_http_retry.py  test_logging.py  test_longshot.py  test_metrics.py  test_monitoring_engine.py  test_paper_capture.py  test_paper_engine.py  test_paper_performance.py  test_paper_trade.py  test_polymarket_schemas.py  test_price_engine.py  test_profit.py  test_ranking.py  test_resolution.py  test_resolution_engine.py  test_scanner.py  test_security.py  test_sentry.py  test_signals_engine.py  test_store.py  (+8 more)
quant/tests/fixtures/: clob_book_empty_ask.json  clob_book_empty_both.json  clob_book_full.json  clob_book_malformed.json  clob_midpoint.json  clob_prices_history.json  clob_spread.json  data_trades.json  gamma_events.json  gamma_market_malformed.json  gamma_markets.json
web/: .dockerignore  .env.local.example  .gitignore  Dockerfile  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
web/e2e/: dashboard.spec.ts
web/tests/: alert-schema.test.ts  (+16 more)
(+72 files in other folders)
