[project]
name = "edge-oracle-executor"
version = "0.1.0"
description = "EdgeOracle execution module — isolated, gated, advisor-fed. Pure core (no keys, no chain) this slice."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # Signer crypto (Phase 4). Local/testnet key signing + address recovery; the production
    # path swaps the local key for AWS KMS (sign-only, key never exported) behind the same API.
    "eth-account>=0.13",
    # The signer's minimal HTTP surface (POST /sign). Deployed as its OWN isolated service.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "httpx>=0.27",  # FastAPI TestClient (signer service tests)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = ["E501", "C408", "B008"]

[tool.coverage.run]
source = ["app"]
