[project]
name = "edge-oracle-quant"
version = "0.1.0"
description = "EdgeOracle quant service — Polymarket ingestion (and, later, signals)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "websockets>=13",
    "redis>=5",
    "prometheus-client>=0.21",
    "sentry-sdk>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B), comprehensions (C4).
select = ["E", "W", "F", "I", "UP", "B", "C4"]
# E501: line length is the formatter's job. C408: dict(k=v) is a deliberate, readable fixture
# pattern (kwargs + .update(overrides)) in the tests.
ignore = ["E501", "C408", "B008"]  # B008: FastAPI's `= Depends(...)` default is the framework idiom

[tool.coverage.run]
source = ["app"]
omit = ["app/seed_demo.py"]
